fixed header on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -431,9 +431,13 @@ main{
 		width: 100%;
 		height: 10px;
 	}
+	
+	.fixedOnMobile {
+		position: fixed;
+	}
 
 	.page-content{
-		margin-top: 1em;
+		margin-top: 5em;
 		padding: 0 5% 0 5%;
 	}
 
